# hph

./: .gitignore  LICENSE  Makefile  README.md
hph-ft260-mnc/: Makefile  MakefileShutdown  MakefileStartup
hph-ft260-mnc/src/: hph-ft260-mnc.cpp  hph-ft260-mnc.hpp
hph-ft260-mnc/src/debug/: debug.cpp  debug.hpp
hph-ft260-mnc/src/device_libraries/: ad5602bksz_library.cpp  ad5602bksz_library.hpp  isl9122a_library.cpp  isl9122a_library.hpp  max11603eee_library.cpp  max11603eee_library.hpp
hph-ft260-mnc/src/hph-ft260/: hph-ft260-types.hpp  hph-ft260.cpp  hph-ft260.hpp
hph-ft260-mnc/src/hph-ft260-mnc-functions/: ad5602bksz_library.hpp  hph-ft260-mnc-functions.cpp  hph-ft260-mnc-functions.hpp  isl9122a_library.hpp
hph-ft260-mnc/src/hph-hidapi/: hph-hidapi.cpp
hph-ft260-ui/: README.md
legacy/: kernelmakefile  newmakefile
setup-scripts/: .Xresources  .clang-format  .vimrc  .vimrc.colors  .vimrc.custom  .vimrc.normal  .vimrc.plugged  Chrome_Setup.sh  Doxyfile.in  Enable_Firewall.sh  Googleit.py  README.md  adjust_symbolic_links.sh  build_composite_md_doc.sh  c.snippets  c.vim  c.ycm_extra_conf.py  clip2snip.sh  compiler_information.sh  cpp.snippets  cu.snippets  docxtomarkdown.sh  doxygen_footer.tex  doxygen_header.tex  en.utf-8.add  i3config  install-hph-drivers.sh  install_and_setup_texlive.sh  install_and_setup_youcompleteme.sh  install_doxygen.sh  install_gsl.sh  install_retropie.sh  linear_xy_line_plot.gptemplate  linear_xy_lines_and_points_comparison_plot.gptemplate  maintenance_notes.md  make_gnuplots.sh  markdown.snippets  markdown.vim  matlab.snippets  matlab.vim  (+29 more)
setup-scripts/executible_source_tree/: CMakeLists.txt  CTestConfig.cmake  Config.cmake.in
setup-scripts/executible_source_tree/lib/: CMakeLists.txt
setup-scripts/executible_source_tree/tests/: CMakeLists.txt
setup-scripts/library_source_tree/: CMakeLists.txt  Config.cmake.in
setup-scripts/library_source_tree/tests/: CMakeLists.txt
src/: .hph-lan7800.c.view  .hph.cpp.view  .hph.hpp.view  .src.view  holdfornow  hph.cpp  hph.hpp
src/hph-ft260/: .hph-ft260.c.view  .hph-ft260.cpp.view  .hph-ft260.hpp.view  .hph-ft260.mine.view  .hph-ft260.view  .test.c.view  complex-hph-ft260  hph-ft260-types.hpp  hph-ft260.cpp  hph-ft260.cppi2stestworks  hph-ft260.cppmine  hph-ft260.cpptousenext  hph-ft260.hpp
src/hph-hidapi/: ..hph-hidapi.view.view  .hph-hidapi.cpp.view  .hph-hidapi.hpp.view  .hph-hidapi.view  hph-hidapi.cpp  hph-hidapi.hpp
src/hph-lan78xx/: hph-lan78xx.c
